// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Characters should render Characters 1`] = `
<div>
  <SearchCharacterForm
    actions={
      Object {
        "fetchCharactersByName": [MockFunction],
      }
    }
  />
  <CharactersList
    characters={
      Object {
        "isLoading": false,
      }
    }
  />
</div>
`;

exports[`Characters should render Characters with loading spinner 1`] = `
<div>
  <SearchCharacterForm
    actions={
      Object {
        "fetchCharactersByName": [MockFunction],
      }
    }
  />
  <Spinner />
</div>
`;
